--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -52,6 +52,7 @@ $section-color: #ffffff;
     height: calc(100vh - 100px);
     background-color: $section-color_2;
     margin: 0px 20px;
+    overflow: auto;
     .group-info {
       height: 91px;
       background-color: $section-color_2;
@@ -120,6 +121,7 @@ $section-color: #ffffff;
     background-color: #fafafa;
     height: calc(100vh - 100px - 90px);
     padding: 35px 40px 0;
+    overflow: scroll;
     .messagespace {
       margin-bottom: 46px;
       .message-info {
@@ -149,13 +151,12 @@ $section-color: #ffffff;
     background-color: #d2d2d2;
     box-sizing: border-box;
     padding: 20px 50px 20px 40px;
-    .message {
+    .Form {
       display: flex;
-      &__contents {
+      .message__contents {
         width: 100%;
         background-color: #fff;
         position: relative;
-        display: flex;
         .input__message {
           height: 50px;
           width: 100%;
