--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,7 +9,7 @@
           - @group.users.each do |member_name|
             = member_name.name
       .header__edit
-        = link_to edit_group_path(current_user), class: "editbtn" do 
+        = link_to edit_group_path(@group), class: "editbtn" do 
           %p.header__editbtn Edit
     .message-list
       .messagespace
